[project]
name = "osm-geoparquet"
version = "0.1.0"
description = "OSM -> GeoParquet 2.0 pipeline, partitioned by country and admin region"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Guillaume Sueur", email = "gsueur@geomermaids.com" },
]
dependencies = [
    "duckdb>=1.1.0",
    "geoparquet-io>=0.2.0",
    "rich>=13.0",
]
